✨ Add ground truth loading and evaluation functionality to adaptive extraction notebook

--- a/llama_adaptive_extraction.ipynb
+++ b/llama_adaptive_extraction.ipynb
@@ -467,6 +467,137 @@
     "2. Apply the appropriate extraction prompt\n",
     "3. Show the results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ad77e12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load ground truth data\n",
+    "from common.evaluation_metrics import load_ground_truth\n",
+    "\n",
+    "ground_truth_path = \"/home/jovyan/nfs_share/tod/evaluation_data/ground_truth.csv\"\n",
+    "ground_truth = load_ground_truth(ground_truth_path, verbose=True)\n",
+    "\n",
+    "print(f\"✅ Ground truth loaded for {len(ground_truth)} images\")\n",
+    "\n",
+    "# Get ground truth for current image\n",
+    "if image_name in ground_truth:\n",
+    "    gt_data = ground_truth[image_name]\n",
+    "    print(f\"✅ Found ground truth for {image_name}\")\n",
+    "else:\n",
+    "    print(f\"❌ No ground truth found for {image_name}\")\n",
+    "    gt_data = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "672b39ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Parse the extraction result into structured format\n",
+    "from common.extraction_parser import hybrid_parse_response\n",
+    "\n",
+    "# Define expected fields for bank statements\n",
+    "bank_statement_fields = [\n",
+    "    \"DOCUMENT_TYPE\",\n",
+    "    \"STATEMENT_DATE_RANGE\",\n",
+    "    \"LINE_ITEM_DESCRIPTIONS\",\n",
+    "    \"TRANSACTION_DATES\",\n",
+    "    \"TRANSACTION_AMOUNTS_PAID\"\n",
+    "]\n",
+    "\n",
+    "# Parse the model's response\n",
+    "extracted_data = hybrid_parse_response(\n",
+    "    extraction_result,\n",
+    "    expected_fields=bank_statement_fields\n",
+    ")\n",
+    "\n",
+    "print(\"✅ Parsed extraction data:\")\n",
+    "for field, value in extracted_data.items():\n",
+    "    preview = value[:100] + \"...\" if len(value) > 100 else value\n",
+    "    print(f\"  {field}: {preview}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48d06f9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate extraction against ground truth\n",
+    "from common.evaluation_metrics import evaluate_extraction\n",
+    "\n",
+    "if gt_data is not None:\n",
+    "    evaluation_result = evaluate_extraction(\n",
+    "        extracted_data=extracted_data,\n",
+    "        ground_truth=gt_data,\n",
+    "        field_list=bank_statement_fields,\n",
+    "        verbose=True\n",
+    "    )\n",
+    "\n",
+    "    print(\"\\n\" + \"=\"*60)\n",
+    "    print(\"EVALUATION RESULTS:\")\n",
+    "    print(\"=\"*60)\n",
+    "    print(f\"Overall Accuracy: {evaluation_result['overall_accuracy']*100:.2f}%\")\n",
+    "    print(f\"Fields Matched: {evaluation_result['fields_matched']}/{evaluation_result['total_fields']}\")\n",
+    "    print(f\"Fields Extracted: {evaluation_result['fields_extracted']}/{evaluation_result['total_fields']}\")\n",
+    "\n",
+    "    print(\"\\n📊 Field-Level Results:\")\n",
+    "    for field in bank_statement_fields:\n",
+    "        if field in evaluation_result['field_results']:\n",
+    "            result = evaluation_result['field_results'][field]\n",
+    "            status = \"✅\" if result['matched'] else \"❌\"\n",
+    "            print(f\"  {status} {field}: {result['accuracy']*100:.0f}% accuracy\")\n",
+    "    print(\"=\"*60)\n",
+    "else:\n",
+    "    print(\"⚠️ Skipping evaluation - no ground truth available\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3875833",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save comprehensive evaluation report\n",
+    "if gt_data is not None:\n",
+    "    eval_output_file = output_dir / f\"adaptive_extraction_eval_{image_name.replace('.png', '')}.txt\"\n",
+    "\n",
+    "    with open(eval_output_file, 'w') as f:\n",
+    "        f.write(f\"Image: {image_name}\\n\")\n",
+    "        f.write(f\"Detected Structure: {detected_structure}\\n\")\n",
+    "        f.write(f\"Prompt Used: {prompt_name}\\n\\n\")\n",
+    "\n",
+    "        f.write(\"=\"*60 + \"\\n\")\n",
+    "        f.write(\"EXTRACTION RESULT:\\n\")\n",
+    "        f.write(\"=\"*60 + \"\\n\")\n",
+    "        f.write(extraction_result.replace(\"**\", \"\"))  # Remove markdown formatting\n",
+    "        f.write(\"\\n\\n\")\n",
+    "\n",
+    "        f.write(\"=\"*60 + \"\\n\")\n",
+    "        f.write(\"EVALUATION:\\n\")\n",
+    "        f.write(\"=\"*60 + \"\\n\")\n",
+    "        f.write(f\"Overall Accuracy: {evaluation_result['overall_accuracy']*100:.2f}%\\n\")\n",
+    "        f.write(f\"Fields Matched: {evaluation_result['fields_matched']}/{evaluation_result['total_fields']}\\n\\n\")\n",
+    "\n",
+    "        f.write(\"Field-Level Results:\\n\")\n",
+    "        for field in bank_statement_fields:\n",
+    "            if field in evaluation_result['field_results']:\n",
+    "                result = evaluation_result['field_results'][field]\n",
+    "                status = \"✅\" if result['matched'] else \"❌\"\n",
+    "                f.write(f\"  {status} {field}: {result['accuracy']*100:.0f}%\\n\")\n",
+    "                f.write(f\"     Expected: {result.get('ground_truth', 'N/A')[:100]}\\n\")\n",
+    "                f.write(f\"     Extracted: {result.get('extracted', 'N/A')[:100]}\\n\\n\")\n",
+    "\n",
+    "    print(f\"✅ Evaluation report saved to: {eval_output_file}\")"
+   ]
   }
  ],
  "metadata": {
