--- a/notebooks_old/llama_VQA.ipynb
+++ b/notebooks_old/llama_VQA.ipynb
@@ -181,9 +181,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (unified_vision_processor)",
+   "display_name": "unified_vision_processor",
    "language": "python",
-   "name": "unified_vision_processor"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
