✨ Refactor Llama model loading and extraction steps for improved clarity and structure

--- a/notebooks/llama_single_flat_extraction.ipynb
+++ b/notebooks/llama_single_flat_extraction.ipynb
@@ -8,6 +8,9 @@
    "outputs": [],
    "source": [
     "# Cell 1\n",
+    "import sys\n",
+    "sys.path.insert(0, '/home/jovyan/_LMM_POC')\n",
+    "\n",
     "from pathlib import Path\n",
     "import random\n",
     "\n",
@@ -47,23 +50,31 @@
    "outputs": [],
    "source": [
     "# Cell 3\n",
-    "# model_id = \"/home/jovyan/shared_PTM/Llama-3.2-11B-Vision-Instruct\"\n",
-    "model_id = \"/home/jovyan/nfs_share/models/Llama-3.2-11B-Vision-Instruct\"\n",
+    "from common.llama_model_loader_robust import load_llama_model_robust\n",
+    "from rich import print as rprint\n",
     "\n",
-    "print(\"🔧 Loading Llama-3.2-Vision model...\")\n",
-    "model = MllamaForConditionalGeneration.from_pretrained(\n",
-    "    model_id,\n",
-    "    torch_dtype=torch.bfloat16,\n",
-    "    device_map=\"auto\",\n",
+    "model_path = \"/home/jovyan/shared_PTM/Llama-3.2-11B-Vision-Instruct\"\n",
+    "\n",
+    "rprint(\"[bold green]Loading Llama model with robust multi-GPU detection...[/bold green]\")\n",
+    "\n",
+    "model, processor = load_llama_model_robust(\n",
+    "    model_path=model_path,\n",
+    "    use_quantization=False,  # No quantization as requested\n",
+    "    device_map='auto',\n",
+    "    max_new_tokens=2000,\n",
+    "    torch_dtype='bfloat16',\n",
+    "    low_cpu_mem_usage=True,\n",
+    "    verbose=True\n",
     ")\n",
     "\n",
-    "# processor\n",
-    "processor = AutoProcessor.from_pretrained(model_id)\n",
+    "# Call tie_weights() after loading\n",
+    "try:\n",
+    "    model.tie_weights()\n",
+    "    rprint(\"[green]✅ Model weights tied successfully[/green]\")\n",
+    "except Exception as e:\n",
+    "    rprint(f\"[yellow]⚠️ tie_weights() warning (can be ignored): {e}[/yellow]\")\n",
     "\n",
-    "for i in range(torch.cuda.device_count()):\n",
-    "    allocated = torch.cuda.memory_allocated(i) / 1e9\n",
-    "    reserved = torch.cuda.memory_reserved(i) / 1e9\n",
-    "    print(f\"    GPU [{i}]: {{allocated:.2f}}GB allocated, {{reserved:.2f}}GB reserved\")"
+    "rprint(\"[bold green]✅ Model ready for single-image extraction[/bold green]\")"
    ]
   },
   {
@@ -72,7 +83,15 @@
    "id": "cell-3",
    "metadata": {},
    "outputs": [],
-   "source": "# Cell 4\nimport sys\nsys.path.insert(0, '/home/jovyan/nfs_share/tod/LMM_POC')\n\nfrom common.text_cleaning import clean_llama_response, clean_markdown_table\n\nprint(\"✅ Text cleaning utilities loaded\")"
+   "source": [
+    "# Cell 4\n",
+    "# import sys\n",
+    "# sys.path.insert(0, '/home/jovyan/_LMM_POC')\n",
+    "\n",
+    "from common.text_cleaning import clean_llama_response, clean_markdown_table\n",
+    "\n",
+    "print(\"✅ Text cleaning utilities loaded\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -82,8 +101,8 @@
    "outputs": [],
    "source": [
     "# Cell 5\n",
-    "# imageName = \"/home/jovyan/_LMM_POC/evaluation_data/image_008.png\"\n",
-    "imageName = \"/home/jovyan/nfs_share/tod/LMM_POC/evaluation_data/image_008.png\"\n",
+    "# imageName = \"/home/jovyan/nfs_share/tod/LMM_POC/evaluation_data/image_008.png\"\n",
+    "imageName = \"/home/jovyan/_LMM_POC/evaluation_data/image_008.png\"\n",
     "\n",
     "print(\"📂 Loading image...\")\n",
     "image = Image.open(imageName)\n",
@@ -197,19 +216,82 @@
   },
   {
    "cell_type": "code",
-   "id": "lfy15cyglti",
-   "source": "# Cell 8\n# Transform markdown table into structured extraction format\nimport re\n\n# Parse markdown table from cleanedOutput\nlines = cleanedOutput.split('\\n')\n\n# Find table rows (skip header and separator lines)\ntable_rows = []\nfound_separator = False\n\nfor line in lines:\n    line = line.strip()\n    if not line or '|' not in line:\n        continue\n    \n    # Skip separator line (| --- | --- |)\n    if re.match(r'^\\|\\s*-+\\s*\\|', line):\n        found_separator = True\n        continue\n    \n    # Only process rows after separator\n    if found_separator:\n        # Parse data row: split by | and clean\n        cells = [cell.strip() for cell in line.split('|')]\n        # Remove empty cells from leading/trailing |\n        cells = [c for c in cells if c]\n        \n        if len(cells) >= 5:  # Date, Description, Withdrawal, Deposit, Balance\n            table_rows.append(cells)\n\nprint(f\"📊 Parsed {len(table_rows)} transaction rows from markdown table\\n\")\n\n# Extract columns (0=Date, 1=Description, 2=Withdrawal)\ndates = [row[0] for row in table_rows]\ndescriptions = [row[1] for row in table_rows]\nwithdrawals = [row[2] for row in table_rows]\n\n# STEP 2: Extract date range\nif dates:\n    first_date = dates[0]\n    last_date = dates[-1]\n    date_range = f\"STATEMENT_DATE_RANGE: [ {first_date} - {last_date} ]\"\nelse:\n    date_range = \"STATEMENT_DATE_RANGE: [ NOT_FOUND ]\"\n\n# STEP 3: Extract all dates\ndates_str = \" | \".join(dates)\ntransaction_dates = f\"TRANSACTION_DATES: [ {dates_str} ]\"\n\n# STEP 4: Extract all descriptions  \ndescriptions_str = \" | \".join(descriptions)\nline_item_descriptions = f\"LINE_ITEM_DESCRIPTIONS: [ {descriptions_str} ]\"\n\n# STEP 5: Extract all withdrawals\nwithdrawals_str = \" | \".join(withdrawals)\ntransaction_amounts = f\"TRANSACTION_AMOUNTS_PAID: [ {withdrawals_str} ]\"\n\n# Display structured output\nprint(\"=\" * 60)\nprint(\"STRUCTURED EXTRACTION OUTPUT:\")\nprint(\"=\" * 60)\nprint(\"DOCUMENT_TYPE: BANK_STATEMENT\\n\")\nprint(date_range)\nprint()\nprint(transaction_dates)\nprint()\nprint(line_item_descriptions)\nprint()\nprint(transaction_amounts)\nprint(\"=\" * 60)\n\n# Save structured output\nstructured_output = f\"\"\"DOCUMENT_TYPE: BANK_STATEMENT\n\n{date_range}\n\n{transaction_dates}\n\n{line_item_descriptions}\n\n{transaction_amounts}\n\"\"\"\n\nstructured_path = Path(\"llama_structured_extraction_output.txt\")\nwith structured_path.open(\"w\", encoding=\"utf-8\") as f:\n    f.write(structured_output)\n\nprint(f\"\\n✅ Structured output saved to: {structured_path}\")\nprint(f\"📁 File size: {structured_path.stat().st_size} bytes\")",
-   "metadata": {},
    "execution_count": null,
-   "outputs": []
+   "id": "lfy15cyglti",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 8\n",
+    "# Transform markdown table into structured extraction format\n",
+    "from common.table_parser import parse_markdown_table, extract_columns, format_structured_extraction\n",
+    "\n",
+    "# Parse markdown table from cleanedOutput\n",
+    "table_rows = parse_markdown_table(cleanedOutput)\n",
+    "\n",
+    "print(f\"📊 Parsed {len(table_rows)} transaction rows from markdown table\\n\")\n",
+    "\n",
+    "# Extract columns (0=Date, 1=Description, 2=Withdrawal)\n",
+    "dates, descriptions, withdrawals = extract_columns(table_rows, 0, 1, 2)\n",
+    "\n",
+    "# Generate structured output (STEPS 2-5)\n",
+    "structured_output = format_structured_extraction(dates, descriptions, withdrawals)\n",
+    "\n",
+    "# Display structured output\n",
+    "print(\"=\" * 60)\n",
+    "print(\"STRUCTURED EXTRACTION OUTPUT:\")\n",
+    "print(\"=\" * 60)\n",
+    "print(structured_output)\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# Save structured output\n",
+    "structured_path = Path(\"llama_structured_extraction_output.txt\")\n",
+    "with structured_path.open(\"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(structured_output)\n",
+    "\n",
+    "print(f\"\\n✅ Structured output saved to: {structured_path}\")\n",
+    "print(f\"📁 File size: {structured_path.stat().st_size} bytes\")"
+   ]
   },
   {
    "cell_type": "code",
-   "id": "y9569i60prh",
-   "source": "# Cell 9\n# Filter out rows with NOT_FOUND in TRANSACTION_AMOUNTS_PAID\n\n# Create parallel lists from extracted data\nfiltered_dates = []\nfiltered_descriptions = []\nfiltered_amounts = []\n\nfor i in range(len(dates)):\n    if withdrawals[i] != \"NOT_FOUND\":\n        filtered_dates.append(dates[i])\n        filtered_descriptions.append(descriptions[i])\n        filtered_amounts.append(withdrawals[i])\n\nprint(f\"📊 Filtered out {len(dates) - len(filtered_dates)} rows with NOT_FOUND\")\nprint(f\"✅ {len(filtered_dates)} transactions with actual withdrawal amounts\\n\")\n\n# STEP 2: Extract date range from filtered data\nif filtered_dates:\n    first_date_filtered = filtered_dates[0]\n    last_date_filtered = filtered_dates[-1]\n    date_range_filtered = f\"STATEMENT_DATE_RANGE: [ {first_date_filtered} - {last_date_filtered} ]\"\nelse:\n    date_range_filtered = \"STATEMENT_DATE_RANGE: [ NOT_FOUND ]\"\n\n# STEP 3: Extract filtered dates\ndates_filtered_str = \" | \".join(filtered_dates)\ntransaction_dates_filtered = f\"TRANSACTION_DATES: [ {dates_filtered_str} ]\"\n\n# STEP 4: Extract filtered descriptions\ndescriptions_filtered_str = \" | \".join(filtered_descriptions)\nline_item_descriptions_filtered = f\"LINE_ITEM_DESCRIPTIONS: [ {descriptions_filtered_str} ]\"\n\n# STEP 5: Extract filtered amounts\namounts_filtered_str = \" | \".join(filtered_amounts)\ntransaction_amounts_filtered = f\"TRANSACTION_AMOUNTS_PAID: [ {amounts_filtered_str} ]\"\n\n# Display filtered structured output\nprint(\"=\" * 60)\nprint(\"FILTERED STRUCTURED EXTRACTION OUTPUT:\")\nprint(\"(Rows with NOT_FOUND in withdrawals removed)\")\nprint(\"=\" * 60)\nprint(\"DOCUMENT_TYPE: BANK_STATEMENT\\n\")\nprint(date_range_filtered)\nprint()\nprint(transaction_dates_filtered)\nprint()\nprint(line_item_descriptions_filtered)\nprint()\nprint(transaction_amounts_filtered)\nprint(\"=\" * 60)\n\n# Save filtered structured output\nfiltered_structured_output = f\"\"\"DOCUMENT_TYPE: BANK_STATEMENT\n\n{date_range_filtered}\n\n{transaction_dates_filtered}\n\n{line_item_descriptions_filtered}\n\n{transaction_amounts_filtered}\n\"\"\"\n\nfiltered_path = Path(\"llama_filtered_extraction_output.txt\")\nwith filtered_path.open(\"w\", encoding=\"utf-8\") as f:\n    f.write(filtered_structured_output)\n\nprint(f\"\\n✅ Filtered output saved to: {filtered_path}\")\nprint(f\"📁 File size: {filtered_path.stat().st_size} bytes\")",
-   "metadata": {},
    "execution_count": null,
-   "outputs": []
+   "id": "y9569i60prh",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 9\n",
+    "# Filter out rows with NOT_FOUND in TRANSACTION_AMOUNTS_PAID\n",
+    "from common.table_parser import filter_not_found_rows\n",
+    "\n",
+    "# Filter rows using module function\n",
+    "filtered_dates, filtered_descriptions, filtered_amounts = filter_not_found_rows(\n",
+    "    dates, descriptions, withdrawals\n",
+    ")\n",
+    "\n",
+    "print(f\"📊 Filtered out {len(dates) - len(filtered_dates)} rows with NOT_FOUND\")\n",
+    "print(f\"✅ {len(filtered_dates)} transactions with actual withdrawal amounts\\n\")\n",
+    "\n",
+    "# Generate filtered structured output\n",
+    "filtered_structured_output = format_structured_extraction(\n",
+    "    filtered_dates, filtered_descriptions, filtered_amounts\n",
+    ")\n",
+    "\n",
+    "# Display filtered structured output\n",
+    "print(\"=\" * 60)\n",
+    "print(\"FILTERED STRUCTURED EXTRACTION OUTPUT:\")\n",
+    "print(\"(Rows with NOT_FOUND in withdrawals removed)\")\n",
+    "print(\"=\" * 60)\n",
+    "print(filtered_structured_output)\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# Save filtered structured output\n",
+    "filtered_path = Path(\"llama_filtered_extraction_output.txt\")\n",
+    "with filtered_path.open(\"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(filtered_structured_output)\n",
+    "\n",
+    "print(f\"\\n✅ Filtered output saved to: {filtered_path}\")\n",
+    "print(f\"📁 File size: {filtered_path.stat().st_size} bytes\")"
+   ]
   }
  ],
  "metadata": {
