✨ Add reproducibility utilities for deterministic model behavior and refactor notebook cells for improved structure

--- a/notebooks/llama_single_flat_extraction.ipynb
+++ b/notebooks/llama_single_flat_extraction.ipynb
@@ -19,27 +19,11 @@
     "\n",
     "import torch\n",
     "from PIL import Image\n",
-    "from transformers import AutoProcessor, MllamaForConditionalGeneration"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cell-1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Cell 2\n",
-    "def set_seed(seed=42):\n",
-    "    \"\"\"Set random seeds for reproducibility\"\"\"\n",
-    "    random.seed(seed)\n",
-    "    np.random.seed(seed)\n",
-    "    torch.manual_seed(seed)\n",
-    "    if torch.cuda.is_available():\n",
-    "        torch.cuda.manual_seed_all(seed)\n",
+    "from transformers import AutoProcessor, MllamaForConditionalGeneration\n",
     "\n",
-    "set_seed(42)\n",
-    "print(\"✅ Random seed set to 42 for reproducibility\")"
+    "from common.reproducibility import set_seed\n",
+    "\n",
+    "set_seed(42)"
    ]
   },
   {
@@ -49,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 3\n",
+    "# Cell 2\n",
     "from common.llama_model_loader_robust import load_llama_model_robust\n",
     "from rich import print as rprint\n",
     "\n",
@@ -80,27 +64,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cell-3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Cell 4\n",
-    "# import sys\n",
-    "# sys.path.insert(0, '/home/jovyan/_LMM_POC')\n",
-    "\n",
-    "from common.text_cleaning import clean_llama_response, clean_markdown_table\n",
-    "\n",
-    "print(\"✅ Text cleaning utilities loaded\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "cell-4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 5\n",
+    "# Cell 3\n",
     "# imageName = \"/home/jovyan/nfs_share/tod/LMM_POC/evaluation_data/image_008.png\"\n",
     "imageName = \"/home/jovyan/_LMM_POC/evaluation_data/image_008.png\"\n",
     "\n",
@@ -116,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 6\n",
+    "# Cell 4\n",
     "# basic flat 5 column [\"Date\", \"Description\", \"Withdrawal\", \"Credit\", \"Balance\"] transaction table prompt\n",
     "# prompt_text = \"\"\"\n",
     "# You are an expert document analyzer specializing in bank statement extraction.\n",
@@ -160,7 +128,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 7\n",
+    "# Cell 5\n",
+    "from common.text_cleaning import clean_llama_response, clean_markdown_table\n",
+    "\n",
+    "print(\"✅ Text cleaning utilities loaded\")\n",
+    "\n",
     "# Create message structure for Llama chat template\n",
     "messageDataStructure = [\n",
     "    {\n",
@@ -221,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 8\n",
+    "# Cell 6\n",
     "# Transform markdown table into structured extraction format\n",
     "from common.table_parser import parse_markdown_table, extract_columns, format_structured_extraction\n",
     "\n",
@@ -259,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cell 9\n",
+    "# Cell 7\n",
     "# Filter out rows with NOT_FOUND in TRANSACTION_AMOUNTS_PAID\n",
     "from common.table_parser import filter_not_found_rows\n",
     "\n",
