✨ Remove execution counts and outputs from cells for cleaner notebook presentation

--- a/llama_multiturn.ipynb
+++ b/llama_multiturn.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,25 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Random seed set to 42 for reproducibility\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def set_seed(seed=42):\n",
-    "    random.seed(seed)\n",
-    "    np.random.seed(seed)\n",
-    "    torch.manual_seed(seed)\n",
-    "    if torch.cuda.is_available():\n",
-    "        torch.cuda.manual_seed_all(seed)\n",
-    "\n",
+    "from common.reproducibility import set_seed\n",
     "set_seed(42)\n",
     "print(\"✅ Random seed set to 42 for reproducibility\")"
    ]
@@ -63,43 +49,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔧 Loading Llama-3.2-Vision model...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0725fcb60c454caaa897cbec0f8f1ba4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Update this path to your local Llama model\n",
-    "# model_id = \"/home/jovyan/shared_PTM/Llama-3.2-11B-Vision-Instruct\"\n",
-    "model_id = \"/home/jovyan/nfs_share/models/Llama-3.2-11B-Vision-Instruct\"\n",
+    "model_id = \"/home/jovyan/shared_PTM/Llama-3.2-11B-Vision-Instruct\"\n",
     "\n",
     "print(\"🔧 Loading Llama-3.2-Vision model...\")\n",
-    "model = MllamaForConditionalGeneration.from_pretrained(\n",
-    "    model_id,\n",
-    "    torch_dtype=torch.bfloat16,\n",
-    "    device_map=\"auto\",\n",
+    "# model = MllamaForConditionalGeneration.from_pretrained(\n",
+    "#     model_id,\n",
+    "#     torch_dtype=torch.bfloat16,\n",
+    "#     device_map=\"auto\",\n",
+    "# )\n",
+    "# processor = AutoProcessor.from_pretrained(model_id)\n",
+    "\n",
+    "from common.llama_model_loader_robust import load_llama_model_robust\n",
+    "\n",
+    "model, processor = load_llama_model_robust(\n",
+    "    model_path=model_id,\n",
+    "    use_quantization=False,\n",
+    "    device_map='auto',\n",
+    "    max_new_tokens=2000,\n",
+    "    torch_dtype='bfloat16',\n",
+    "    low_cpu_mem_usage=True,\n",
+    "    verbose=True\n",
     ")\n",
-    "processor = AutoProcessor.from_pretrained(model_id)\n",
+    "\n",
+    "# Add tie_weights() call\n",
+    "try:\n",
+    "    model.tie_weights()\n",
+    "    print(\"✅ Model weights tied successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"⚠️ tie_weights() warning: {e}\")\n",
     "\n",
     "# processor"
    ]
@@ -113,19 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📁 Loading image...\n",
-      "✅ Image loaded: (900, 1320)\n",
-      "✅ Images list created with 1 image(s)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Update this path to your test image\n",
     "# imageName = \"/home/jovyan/shared_PoC_data/evaluation_data/image_009.png\"\n",
@@ -149,24 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "💬 Prompt: \n",
-      "You are an expert document analyser specializing in Date Grouped Australian Bank Statement extraction.\n",
-      "Date Grouped Bank Statements are date ordered, with one or more transactions for each date header.\n",
-      "Every transaction for a given date heading has a description, a debit/credit amount and finally a balance amount with a ' CR' suffix.\n",
-      "Extract all balance amounts along with their ' CR' suffix, the transaction dates (from the date heading) and transaction descriptions,\n",
-      "maintaining the same date ordering as the image, with every transaction appearing on its own row and remembering that some date headings have more than one balance.\n",
-      "\n",
-      "🤖 Generating response with Llama-3.2-Vision...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Visual Question Answering - ask a simple question about the image\n",
     "prompt = \"\"\"\n",
@@ -204,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,69 +193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Response generated successfully!\n",
-      "\n",
-      "============================================================\n",
-      "CLEANED EXTRACTION:\n",
-      "============================================================\n",
-      "Here is the extracted data in the format you requested:\n",
-      "\n",
-      "| Date | Balance | Transaction Description |\n",
-      "| --- | --- | --- |\n",
-      "| 07/09/2025 | $48890.58 | EFTPOS Cash Out PRICELINE PHARMACY MACKAY QLD |\n",
-      "| 08/09/2025 | $49212.76 | EFTPOS Purchase OFFICEWORKS BUSINESS ROCKHAMPTO... |\n",
-      "| 04/09/2025 | $49277.09 | Mortgage Repayment MORT 0103P16754533 NAB |\n",
-      "| 03/09/2025 | $49226.81 | OSKO Payment to MIKE CHEN 809845773133 |\n",
-      "| 03/09/2025 | $51312.57 | Direct Debit 15395P41608263 MWF 42730 |\n",
-      "| 02/09/2025 | $61511.48 | Salary Payment ATO 28782P60782100 |\n",
-      "| 01/09/2025 | $43405.77 | Auto Payment UTILITIES AGL 79479A0P85943944 |\n",
-      "| 01/09/2025 | $43440.81 | DIRECT CREDIT SALARY 6080P67812986 |\n",
-      "| 01/09/2025 | $43708.81 | BPAY Payment BILLER60279 CRN 9813018480 |\n",
-      "| 31/08/2025 | $39296.85 | Professional Services Red Energy 98073P31959417 |\n",
-      "| 29/08/2025 | $41754.72 | Card Purchase RED ROOSTER Paramatta SA |\n",
-      "| 29/08/2025 | $42025.03 | Credit Card Payment CC 72599P33283283V98 |\n",
-      "| 27/08/2025 | $43882.12 | EFTPOS Cash Out PRICELINE PHARMACY BRISBANE QLD |\n",
-      "| 27/08/2025 | $44203.72 | Card Purchase CHEMIST WAREHOUSE DISCOUNT Richmo... |\n",
-      "| 26/08/2025 | $44426.28 | Fortnightly Pay ATO PAYROLL 91032P35687918 |\n",
-      "| 24/08/2025 | $38747.07 | PAY RUN ACME CORP PTY LTD 99584P07785218 |\n",
-      "| 24/08/2025 | $34291.61 | Salary Payment ATO 30175P32361415 |\n",
-      "| 23/08/2025 | $26339.68 | Online Purchase amazon.com.au AUS |\n",
-      "| 22/08/2025 | $20423.46 | Salary Payment ATO 28773P16041610 |\n",
-      "| 20/08/2025 | $20409.76 | Transfer To Vicks Account NetBank 54381P90841102 |\n",
-      "| 20/08/2025 | $22754.86 | Salary Payment ATO 94514P80490207 |\n",
-      "| 20/08/2025 | $19213.59 | Transfer To Western Port Marina NetBank From Tod |\n",
-      "| 19/08/2025 | $19940.07 | Subscription Netflix 33588P77385123 |\n",
-      "| 18/08/2025 | $20141.21 | Contactless Payment Cinema CAIRNS QLD |\n",
-      "| 18/08/2025 | $20352.49 | Auto Payment UTILITIES Red Energy 15107P21771655 |\n",
-      "| 18/08/2025 | $20385.73 | Contactless Payment Restaurant MACKAY QLD |\n",
-      "| 17/08/2025 | $20531.43 | Fortnightly Pay ATO PAYROLL 36358P70254998 |\n",
-      "| 14/08/2025 | $13330.24 | Centrelink Payment JobSeeker 59392P56090878 |\n",
-      "| 14/08/2025 | $11088.85 | International Transaction Fee |\n",
-      "| 13/08/2025 | $11115.91 | Equipment Purchase OfficeMax Australia 13554P45... |\n",
-      "| 13/08/2025 | $11594.77 | International ATM USA USD |\n",
-      "| 11/08/2025 | $11855.48 | Dividend Payment PREMIUM CORP PTY LTD 7353SP419... |\n",
-      "| 11/08/2025 | $5460.39 | Invoice Payment HARVEY NORMAN FLAGSHIP PTY LTD ... |\n",
-      "| 10/08/2025 | $5689.78 | Online Purchase ebay.com.au AUS |\n",
-      "| 10/08/2025 | $5949.73 | Subscription Spotify Monthly 15369P58427775 |\n",
-      "| 09/08/2025 | $9133.98 | International Transaction Fee |\n",
-      "| 06/08/2025 | $6157.78 | Business Expense IT Equipment 66969P86141679 |\n",
-      "| 06/08/2025 | $6792.96 | Auto Payment UTILITIES Energy Australia 47683P7... |\n",
-      "| 08/08/2025 | $6884.90 | Auto Payment UTILITIES Red Energy 81338P61572286 |\n",
-      "\n",
-      "Note: The 'CR' suffix is not explicitly mentioned in the provided data, but it is implied in the context of the question.\n",
-      "============================================================\n",
-      "✅ Response saved to: llama_grouped_bank_statement_output.txt\n",
-      "📊 File size: 2994 bytes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Process the input using the CORRECT multi-turn pattern\n",
     "# Based on: https://medium.com/data-science/chat-with-your-images-using-multimodal-llms-60af003e8bfa\n",
@@ -376,19 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Conversation history initialized\n",
-      "📊 Current conversation has 2 messages (1 user + 1 assistant)\n",
-      "💡 Pattern: Using working multi-turn approach from Medium article\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Store conversation history for multi-turn support\n",
     "# Initialize with first exchange\n",
@@ -416,29 +303,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔍 Current conversation structure:\n",
-      "============================================================\n",
-      "\n",
-      "Message 1 (user):\n",
-      "  [image]\n",
-      "  [text]: \n",
-      "You are an expert document analyser specializing in Date Grouped Australian Bank Statement extracti...\n",
-      "\n",
-      "Message 2 (assistant):\n",
-      "  [text]: Here is the extracted data in the format you requested:\n",
-      "\n",
-      "| Date | Balance | Transaction Description ...\n",
-      "============================================================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Optional: Debug conversation structure\n",
     "print(\"🔍 Current conversation structure:\")\n",
@@ -463,28 +330,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "💬 Follow-up question: How many transactions are shown in this bank statement?\n",
-      "🤖 Generating follow-up response with Llama-3.2-Vision...\n",
-      "\n",
-      "✅ Follow-up response generated successfully!\n",
-      "\n",
-      "============================================================\n",
-      "FOLLOW-UP RESPONSE:\n",
-      "============================================================\n",
-      "There are 40 transactions shown in this bank statement.\n",
-      "============================================================\n",
-      "\n",
-      "📊 Conversation now has 4 messages\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Follow-up question (Turn 2)\n",
     "# Using the WORKING pattern from: https://medium.com/data-science/chat-with-your-images-using-multimodal-llms-60af003e8bfa\n",
@@ -548,30 +396,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "💬 Follow-up question: What is the date range covered by this bank statement?\n",
-      "🤖 Generating follow-up response with Llama-3.2-Vision...\n",
-      "\n",
-      "✅ Follow-up response generated successfully!\n",
-      "\n",
-      "============================================================\n",
-      "FOLLOW-UP RESPONSE:\n",
-      "============================================================\n",
-      "The date range covered by this bank statement is from **August 8, 2025**, to **September 7, 2025**.\n",
-      "============================================================\n",
-      "\n",
-      "📊 Conversation now has 6 messages\n",
-      "\n",
-      "💡 To ask more questions, copy this cell and modify the 'follow_up_prompt_3' variable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Third turn - another follow-up (uncomment to use)\n",
     "follow_up_prompt_3 = \"What is the date range covered by this bank statement?\"\n",
@@ -632,19 +459,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Full conversation saved to: llama_multiturn_conversation.txt\n",
-      "📊 File size: 5079 bytes\n",
-      "💬 Total messages in conversation: 6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save the entire conversation to a file\n",
     "output_path = Path(\"llama_multiturn_conversation.txt\")\n",
