--- a/notebooks/llama_multiturn_debit_extractor.ipynb
+++ b/notebooks/llama_multiturn_debit_extractor.ipynb
@@ -24,7 +24,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# Add project root to path for common/ imports\nimport sys\nfrom pathlib import Path\nsys.path.insert(0, str(Path.cwd().parent))\n\nimport random\nimport numpy as np\nimport torch\nfrom PIL import Image\nfrom transformers import AutoProcessor, MllamaForConditionalGeneration\nfrom transformers.image_utils import load_image\nfrom tqdm.notebook import tqdm\nfrom IPython.display import display, Markdown"
+   "source": [
+    "# Add project root to path for common/ imports\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "sys.path.insert(0, str(Path.cwd().parent))\n",
+    "\n",
+    "import random\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from PIL import Image\n",
+    "from transformers import AutoProcessor, MllamaForConditionalGeneration\n",
+    "from transformers.image_utils import load_image\n",
+    "from tqdm.notebook import tqdm\n",
+    "from IPython.display import display, Markdown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": "## Pre-emptive Memory Cleanup\n\nOptional GPU memory cleanup to prevent OOM errors when switching between models.",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "source": "# Optional: Pre-emptive memory cleanup (useful when switching models)\ntry:\n    from common.gpu_optimization import emergency_cleanup\n    print(\"🧹 Clearing GPU memory...\")\n    emergency_cleanup(verbose=False)\n    print(\"✅ Memory cleanup complete\")\nexcept ImportError:\n    print(\"⚠️ GPU optimization module not available - skipping cleanup\")",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -40,8 +66,7 @@
    "outputs": [],
    "source": [
     "from common.reproducibility import set_seed\n",
-    "set_seed(42)\n",
-    "print(\"✅ Random seed set to 42 for reproducibility\")"
+    "set_seed(42)"
    ]
   },
   {
@@ -89,7 +114,7 @@
    "source": [
     "## Define chat_with_mllm Function\n",
     "\n",
-    "This function encapsulates the multi-turn conversation pattern, making it easy to have back-and-forth conversations with the model about an image."
+    "This function encapsulates the multi-turn conversation pattern."
    ]
   },
   {
@@ -194,7 +219,7 @@
    "outputs": [],
    "source": [
     "# Image path\n",
-    "imageName = \"/home/jovyan/nfs_share/tod/LMM_POC/evaluation_data/image_008.png\"\n",
+    "imageName = \"/home/jovyan/_LMM_POC/evaluation_data/image_009.png\"\n",
     "\n",
     "# Initial extraction prompt\n",
     "prompt = \"\"\"\n",
@@ -473,26 +498,6 @@
     "print(f\"✅ Full conversation saved to: {output_path}\")\n",
     "print(f\"📊 File size: {output_path.stat().st_size} bytes\")\n",
     "print(f\"💬 Total messages in conversation: {len(messages)}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Summary\n",
-    "\n",
-    "This notebook demonstrates:\n",
-    "- Clean multi-turn conversations using `chat_with_mllm`\n",
-    "- Focused debit/withdrawal extraction\n",
-    "- Self-verification by referencing previous responses\n",
-    "- Easy-to-extend conversation structure\n",
-    "\n",
-    "**Key advantages over manual approach**:\n",
-    "- 3-5 lines per turn (vs ~25 lines)\n",
-    "- Automatic message management\n",
-    "- No boilerplate code\n",
-    "- Easy to add new turns\n",
-    "- Less error-prone"
    ]
   }
  ],
